添加客服页面，完善了登录功能，增加了转跳到用户页面的方法

--- a/HRStore/views/products.xml
+++ b/HRStore/views/products.xml
@@ -68,7 +68,7 @@
                                         </t>
 
                                         <li class="nav-item">
-                                            <a class="nav-link" href="dashboard.html">在线客服</a>
+                                            <a class="nav-link" href="/customer_service">在线客服</a>
                                         </li>
                                     </ul>
                                     <t t-if="user">
