--- a/HRStore/views/home.xml
+++ b/HRStore/views/home.xml
@@ -22,28 +22,28 @@
                                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                     <ul class="navbar-nav ml-auto main-nav ">
                                         <li class="nav-item active">
-                                            <a class="nav-link" href="/home">首页</a>
+                                            <a class="nav-link" href="/home?#{user}">首页</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="/products?type=2">培训产品</a>
+                                            <a class="nav-link" href="/products?user=#{user}&amp;type=2">培训产品</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="/products?type=1">活动策划</a>
+                                            <a class="nav-link" href="/products?type=1&amp;user=#{user}">活动策划</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="/products?type=3">精美商品</a>
+                                            <a class="nav-link" href="/products?type=3&amp;user=#{user}">精美商品</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="/products?type=4">法律服务</a>
+                                            <a class="nav-link" href="/products?type=4&amp;user=#{user}">法律服务</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="dashboard.html">在线客服</a>
+                                            <a class="nav-link" href="/customer_service?user=#{user}">在线客服</a>
                                         </li>
                                     </ul>
                                     <t t-if="user">
                                         <ul class="navbar-nav ml-auto mt-10">
                                             <li class="nav-item">
-                                                <a href="/user_profile/#{user.user_id}">
+                                                <a href="/user_profile/#{user}">
                                                     <img src="\HRStore\static\src\images\my.png" height="60px"
                                                          width="50px"/>
                                                 </a>
@@ -54,10 +54,10 @@
 
                                         <ul class="navbar-nav ml-auto mt-10">
                                             <li class="nav-item">
-                                                <a class="nav-link login-button" href="/login">登陆</a>
+                                                <a class="nav-link login-button" href="/login?user=#{user}">登陆</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a class="nav-link add-button" href="/sign_up">注册</a>
+                                                <a class="nav-link add-button" href="/sign_up?user=#{user}">注册</a>
                                             </li>
                                         </ul>
                                     </t>
@@ -99,7 +99,7 @@
                                         <div class="block d-flex ">
                                             <input type="hidden" name="csrf_token"
                                                    t-att-value="request.csrf_token()"/>
-                                            <input type="text" class="input-search" id="search" placeholder="站内查找..."/>
+                                            <input name="product_name" type="text" class="input-search" id="search" placeholder="站内查找..."/>
                                             <!-- Search Button -->
                                             <input type="submit" class="btn btn-main" t-att-value="查找"/>
                                             <!--<button class="btn btn-main">查找</button>-->
