--- a/HRStore/views/login.xml
+++ b/HRStore/views/login.xml
@@ -14,7 +14,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <nav class="navbar navbar-expand-lg  navigation">
-                                <a class="navbar-brand" href="/home">
+                                <a class="navbar-brand" href="/home?user=#{user}">
                                     <img src="/HRStore/static/src/images/logo.jpg" height="100" width="220"/>
                                 </a>
                                 <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -25,7 +25,7 @@
                                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                     <ul class="navbar-nav ml-auto main-nav ">
                                         <li class="nav-item active">
-                                            <a class="nav-link" href="/home">首页</a>
+                                            <a class="nav-link" href="/home?user=#{user}">首页</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="/products?type=2">培训产品</a>
@@ -40,7 +40,7 @@
                                             <a class="nav-link" href="/products?type=4">法律服务</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="dashboard.html">在线客服</a>
+                                            <a class="nav-link" href="/customer_service">在线客服</a>
                                         </li>
                                     </ul>
 
@@ -64,21 +64,27 @@
                 <div class="container">
                     <center>
                         <div class="row-row">
-                            <div class="col-md-12">
+                            <div class="col-md-6">
                                 <!-- Header Contetnt -->
                                 <div class="content-block">
                                     <div class="advance-search">
-                                        <form action="/home" method="post">
 
+                                            <t t-if="no_user">
+                                                <div class="alert alert-warning">
+                                                <p>用户名或密码错误</p>
+                                                </div>
+                                            </t>
+
+                                        <form action="/login_home" method="post" >
                                             <div class="row-row">
-                                                <input name="username" type="text" class="input-search" id="userid" placeholder="账号"
+                                                <input name="username" type="text" class="input-search form-control" id="userid" placeholder="账号"
                                                        size="15" style="width:400px;height:50px;"/>
                                             </div>
                                             <br/>
                                             <br/>
                                             <div class="row-row">
                                                 <!-- Store Search -->
-                                                <input name="password" type="password" class="input-search" id="password"
+                                                <input name="password" type="password" class="input-search form-control" id="password"
                                                        placeholder="密码" size="15" style="width:400px;height:50px;"/>
                                                 <input type="hidden" name="csrf_token"
                                                        t-att-value="request.csrf_token()"/>
@@ -100,6 +106,19 @@
                 <!-- Container End -->
             </section>
 
+            <footer class="footer-bottom">
+                <!-- Container Start -->
+                <div class="container">
+                    <p type="center">Copyright © 2019.7-现在 HR商城 版权所有</p>
+                </div>
+                <!-- Container End -->
+                <!-- To Top -->
+                <div class="top-to">
+                    <a id="top" class="" href="">
+                        <i class="fa fa-angle-up"></i>
+                    </a>
+                </div>
+            </footer>
         </body>
     </template>
 
