--- a/HRStore/views/login.xml
+++ b/HRStore/views/login.xml
@@ -14,7 +14,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <nav class="navbar navbar-expand-lg  navigation">
-                                <a class="navbar-brand" href="/home?user=#{user}">
+                                <a class="navbar-brand" href="/home">
                                     <img src="/HRStore/static/src/images/logo.jpg" height="100" width="220"/>
                                 </a>
                                 <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -25,7 +25,7 @@
                                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                     <ul class="navbar-nav ml-auto main-nav ">
                                         <li class="nav-item active">
-                                            <a class="nav-link" href="/home?user=#{user}">首页</a>
+                                            <a class="nav-link" href="/home">首页</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="/products?type=2">培训产品</a>
@@ -40,7 +40,7 @@
                                             <a class="nav-link" href="/products?type=4">法律服务</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="/customer_service">在线客服</a>
+                                            <a class="nav-link" href="dashboard.html">在线客服</a>
                                         </li>
                                     </ul>
 
@@ -64,27 +64,27 @@
                 <div class="container">
                     <center>
                         <div class="row-row">
-                            <div class="col-md-6">
+                            <div class="col-md-12">
                                 <!-- Header Contetnt -->
                                 <div class="content-block">
                                     <div class="advance-search">
-
-                                            <t t-if="no_user">
+                                        <form action="/login_home" method="post">
+                                            <t t-if="message">
                                                 <div class="alert alert-warning">
-                                                <p>用户名或密码错误</p>
+                                                    <span t-esc="message"></span>
                                                 </div>
                                             </t>
-
-                                        <form action="/login_home" method="post" >
                                             <div class="row-row">
-                                                <input name="username" type="text" class="input-search form-control" id="userid" placeholder="账号"
+                                                <input name="username" type="text" class="input-search form-control"
+                                                       id="userid" placeholder="账号"
                                                        size="15" style="width:400px;height:50px;"/>
                                             </div>
                                             <br/>
                                             <br/>
                                             <div class="row-row">
                                                 <!-- Store Search -->
-                                                <input name="password" type="password" class="input-search form-control" id="password"
+                                                <input name="password" type="password" class="input-search form-control"
+                                                       id="password"
                                                        placeholder="密码" size="15" style="width:400px;height:50px;"/>
                                                 <input type="hidden" name="csrf_token"
                                                        t-att-value="request.csrf_token()"/>
@@ -105,7 +105,37 @@
                 </div>
                 <!-- Container End -->
             </section>
-
+<footer class="footer section section-sm">
+                <!-- Container Start -->
+                <div class="container">
+                    <div class="row offset-md-1 offset-lg-0 block about">
+                        <img src="\HRStore\static\src\images\logo.jpg" height="100" width="200"/>
+                        <div class="footer-text">
+                        </div>
+                        <ul>
+                            <li>
+                                <a href="#">增值电信业务经营许可证：京B2-20080224</a>
+                            </li>
+                            <li>
+                                <a href="#">值电信业务经营许可证（跨地区）： B2-20150210</a>
+                            </li>
+                            <li>
+                                <a href="#">北京市网络食品销售第三方平台提供者备案：京网食A33010001
+                                    <br/>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">信息网络传播视听许可证：1109364号</a>
+                            </li>
+                            <li>
+                                <a href="#">出版物网络交易平台服务经营备案号：新出发京备字第002号</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- Container End -->
+            </footer>
+            <!-- Footer Bottom -->
             <footer class="footer-bottom">
                 <!-- Container Start -->
                 <div class="container">
