--- a/HRStore/views/products.xml
+++ b/HRStore/views/products.xml
@@ -71,13 +71,17 @@
                                             <a class="nav-link" href="/customer_service">在线客服</a>
                                         </li>
                                     </ul>
-                                    <t t-if="user">
+                                    <t t-if="request.session.user_id">
                                         <ul class="navbar-nav ml-auto mt-10">
                                             <li class="nav-item">
-                                                <a href="/user_profile/#{user.user_id}">
-                                                    <img src="\HRStore\static\src\images\my.png" height="60px"
-                                                         width="50px"/>
-                                                </a>
+                                                <form action="/user_profile" method="post">
+                                                    <input type="hidden" name="csrf_token"
+                                                           t-att-value="request.csrf_token()"/>
+                                                    <input type="hidden" name="user_id"
+                                                           t-att-value="request.session.user_id"/>
+                                                    <input type="image"
+                                                           src="\HRStore\static\src\images\my.png" height="60px"/>
+                                                </form>
                                             </li>
                                         </ul>
                                     </t>
@@ -99,12 +103,15 @@
                 </div>
             </section>
             <div class="advance-search">
-                <form action="#">
+                <form action="/search_product" method="post">
                     <div class="row">
                         <!-- Store Search -->
-
+                        <input type="hidden" name="csrf_token"
+                               t-att-value="request.csrf_token()"/>
+                        <input type="hidden" name="type"
+                               />
                         <div class="block d-flex ">
-                            <input type="text" class="input-search" id="search" placeholder="站内查找..."/>
+                            <input type="text" name="pro_name" class="input-search" id="search" placeholder="站内查找..."/>
                             <!-- Search Button -->
                             <button class="btn btn-main">查找</button>
                         </div>
@@ -131,23 +138,31 @@
                                     <h4 class="widget-header">类别</h4>
                                     <ul class="category-list">
                                         <li>
-                                            <a href="category.html">培训产品
-                                                <span>93</span>
+                                            <a href="/products?type=2">培训产品
+                                                <t t-if="product1_num">
+                                                    <span t-esc="product2_num"></span>
+                                                </t>
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="activityindex.html">活动策划
-                                                <span>233</span>
+                                            <a href="/products?type=1">活动策划
+                                                <t t-if="product1_num">
+                                                    <span t-esc="product1_num"></span>
+                                                </t>
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="goodsindex.html">精美商品
-                                                <span>183</span>
+                                            <a href="/products?type=3">精美商品
+                                                <t t-if="product1_num">
+                                                    <span t-esc="product3_num"></span>
+                                                </t>
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="layindex.html">法律服务
-                                                <span>343</span>
+                                            <a href="/products?type=4">法律服务
+                                                <t t-if="product1_num">
+                                                    <span t-esc="product4_num"></span>
+                                                </t>
                                             </a>
                                         </li>
                                     </ul>
@@ -168,11 +183,11 @@
                                                     <div class="card">
                                                         <div class="thumb-content">
                                                             <!-- <div class="price">$200</div> -->
-                                                            <a href="">
+
                                                                 <span t-field="product.pro_image"
                                                                       t-options="{'widget': 'image', 'class': 'mx-auto d-block img-thumbnail'}"/>
 
-                                                            </a>
+
                                                         </div>
                                                         <div class="card-body">
                                                             <h4 class="card-title">
@@ -208,22 +223,15 @@
                                     <ul class="pagination">
                                         <li class="page-item">
                                             <a class="page-link" href="#" aria-label="Previous">
-                                                <span aria-hidden="true">上一页</span>
+
                                                 <span class="sr-only">Previous</span>
                                             </a>
                                         </li>
-                                        <li class="page-item">
-                                            <a class="page-link" href="#">1</a>
-                                        </li>
                                         <li class="page-item active">
-                                            <a class="page-link" href="#">2</a>
-                                        </li>
-                                        <li class="page-item">
-                                            <a class="page-link" href="#">3</a>
+                                            <a class="page-link" href="#">1</a>
                                         </li>
                                         <li class="page-item">
                                             <a class="page-link" href="#" aria-label="Next">
-                                                <span aria-hidden="true">####</span>
                                                 <span class="sr-only">Next</span>
                                             </a>
                                         </li>
@@ -241,7 +249,7 @@
                 <!-- Container Start -->
                 <div class="container">
                     <div class="row offset-md-1 offset-lg-0 block about">
-                        <img src="images/logo.jpg" height="100" width="200"/>
+                        <img src="\HRStore\static\src\images\logo.jpg" height="100" width="200"/>
                         <div class="footer-text">
                         </div>
                         <ul>
