--- a/HRStore/views/sign_up.xml
+++ b/HRStore/views/sign_up.xml
@@ -41,7 +41,7 @@
                                             <a class="nav-link" href="/products?type=4">法律服务</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="dashboard.html">在线客服</a>
+                                            <a class="nav-link" href="/customer_service">在线客服</a>
                                         </li>
                                     </ul>
 
